Fixed spacing

--- a/src/styles/components/charts/dialchart.less
+++ b/src/styles/components/charts/dialchart.less
@@ -109,11 +109,7 @@
 
   .nodes-grid-dials-spacer {
     height: 0;
-    margin-bottom: 0;
-    margin-left: ceil(@base-spacing-unit * 0.3333);
     margin-right: ceil(@base-spacing-unit * 0.3333);
-    margin-top: 0;
-    overflow: hidden;
     width: ceil(@base-spacing-unit * 3.33);
   }
 }
